# games_eng

./: CMakeLists.txt  README.md
practical 3/: main.cpp
practical_1/: main(2).cpp  main.cpp  pong.cpp
practical_2/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
practical_3/: entity.cpp  entity.h  levelsystem.h  main.cpp  player.cpp  player.h
res/img/: Thumbs.db
